# devcontainer-appplatform

./: .gitignore  AGENT.md  CLAUDE.md  README.md
.devcontainer/: .env  Dockerfile  README-docker.md  README.md  devcontainer.json  docker-compose.yml  post-create.sh  setup-doctl-config.sh
test-suite/: .gitignore  README.md  go.mod  main.go  main.py  pyproject.toml  run-suite.sh  setup-containers.sh  verify-containers.sh  verify-runtimes.sh
test-suite/go/: go.mod  go.sum  main.go  run-tests.sh  utils.go
test-suite/go/tests/: kafka.go  minio.go  mysql.go  opensearch.go  postgres.go  types.go  valkey.go
test-suite/node/: package-lock.json  package.json  run-tests.mjs
test-suite/node/lib/: utils.js
test-suite/node/tests/: kafka.js  minio.js  mysql.js  opensearch.js  postgres.js  valkey.js
test-suite/python/: README.md  pyproject.toml  run_tests.py  utils.py
test-suite/python/tests/: test_kafka.py  test_minio.py  test_mysql.py  test_opensearch.py  test_postgres.py  test_valkey.py
test-suite/rust/: Cargo.toml  run-tests.sh
test-suite/rust/src/: main.rs  utils.rs
test-suite/rust/src/tests/: kafka.rs  minio.rs  mod.rs  mysql.rs  opensearch.rs  postgres.rs  valkey.rs
