[package]
name = "devcontainer-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-tests"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
postgres = "0.19"
mysql = "25.0"
redis = "0.27"
rdkafka = { version = "0.37", features = ["cmake-build"] }
opensearch = "2.2"
rust-s3 = "0.35"
uuid = { version = "1.11", features = ["v4", "serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
serde_json = "1.0"
futures = "0.3"
